--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -43,12 +43,12 @@
 }
 
 /* 调试模式：取消下面的注释可以看到触发区域 */
-/*
-#secret-trigger:hover {
+
+secret-trigger:hover {
     opacity: 0.1 !important;
     background: red;
 }
-*/
+
 
 /* 隐藏secret页面在菜单中的显示（如果不小心显示了） */
 a[href*="/secret/"] {
