--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -1,2 +1,3 @@
 <!-- Custom Secret Entrance Script -->
-<script defer src="/js/secret-entrance.js"></script>
+<script defer src="/js/secret-entrance.js?v=20251101"></script>
+
