--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -1,3 +1,5 @@
 <!-- Custom Secret Entrance Script -->
 <script defer src="/js/secret-entrance.js?v=20251101"></script>
 
+<!-- Load custom Neo button styles -->
+<link rel="stylesheet" href="/css/neo.css">
