--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -1,5 +1,5 @@
 <!-- site cover assets -->
-<link rel="stylesheet" href="/css/cover.css">
+<link rel="stylesheet" href="{{ "css/cover.css" | relURL }}">
 
 <!-- 将 Hugo 配置注入给 JS（用于首页判断 + 文案） -->
 <script>
@@ -9,7 +9,7 @@
 </script>
 
 <!-- 点击进入的封面脚本 -->
-<script defer src="/js/cover-click.js"></script>
+<script defer src="{{ "js/cover-click.js" | relURL }}"></script>
 
 <!-- 你已有的私密入口 -->
-<script defer src="/js/secret-entrance.js?v=20251101"></script>
+<script defer src="{{ "js/secret-entrance.js?v=20251101" | relURL }}"></script>
